bug arreglado z-index

--- a/src/app/components/specific_services/specific-services-general-view/specific-services-general-view.component.css
+++ b/src/app/components/specific_services/specific-services-general-view/specific-services-general-view.component.css
@@ -30,6 +30,18 @@
       }
 }
 
+@media (min-width: 1000px) {
+  .service-card {
+    position: relative;
+  }
+
+  .not-available-tag {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
+
 .alert2 {
   padding: 15px;
   margin-bottom: 20px;
